Bug 62950 - [GTK] [WK2] WebKit2 build break fixes.
Summary: [GTK] [WK2] WebKit2 build break fixes.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on: 37369
Blocks:
  Show dependency treegraph
 
Reported: 2011-06-19 04:01 PDT by Lukasz Slachciak
Modified: 2011-06-21 10:00 PDT (History)
1 user (show)

See Also:


Attachments
build break fix (2.05 KB, patch)
2011-06-19 04:02 PDT, Lukasz Slachciak
no flags Details | Formatted Diff | Diff
build break fix (2.04 KB, patch)
2011-06-19 04:16 PDT, Lukasz Slachciak
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Lukasz Slachciak 2011-06-19 04:01:04 PDT
When building WebKit2 for GTK there are few build breaks connected with missing include files. Attached patch fixes this issue.
Comment 1 Lukasz Slachciak 2011-06-19 04:02:54 PDT
Created attachment 97719 [details]
build break fix
Comment 2 Lukasz Slachciak 2011-06-19 04:12:53 PDT
I encountered following errors when building webkit with --enable-webkit2 --with-gtk=3.0 options:
--enable-webkit2 --with-gtk=3.0

/bin/mkdir -p ./.deps/DerivedSources
../../../../sources/WebKit/WebKit/Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp: In static member function ‘static WTF::PassRefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(size_t)’:
../../../../sources/WebKit/WebKit/Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:115:60: error: ‘g_get_tmp_dir’ was not declared in this scope
../../../../sources/WebKit/WebKit/Source/WebKit2/Platform/unix/SharedMemoryUnix.cpp:115:92: error: ‘g_build_filename’ was not declared in this scope
make[1]: *** [Source/WebKit2/Platform/unix/libwebkit2gtk_3_0_la-SharedMemoryUnix.lo] Błąd 1
make[1]: *** Oczekiwanie na niezakończone zadania....
../../../../sources/WebKit/WebKit/Source/WebKit2/Shared/gtk/WebCoreArgumentCodersGtk.cpp: In static member function ‘static bool CoreIPC::ArgumentCoder<WebCore::ResourceRequest>::decode(CoreIPC::ArgumentDecoder*, WebCore::ResourceRequest&)’:
../../../../sources/WebKit/WebKit/Source/WebKit2/Shared/gtk/WebCoreArgumentCodersGtk.cpp:81:60: error: invalid use of incomplete type ‘struct WTF::CString’
../../../../sources/WebKit/WebKit/Source/JavaScriptCore/wtf/Forward.h:38:11: error: forward declaration of ‘struct WTF::CString’
make[1]: *** [Source/WebKit2/Shared/gtk/libwebkit2gtk_3_0_la-WebCoreArgumentCodersGtk.lo] Błąd 1
../../../../sources/WebKit/WebKit/Source/WebKit2/UIProcess/API/gtk/PageClientImpl.cpp: In member function ‘virtual void WebKit::PageClientImpl::setCursor(const WebCore::Cursor&)’:
../../../../sources/WebKit/WebKit/Source/WebKit2/UIProcess/API/gtk/PageClientImpl.cpp:145:34: error: invalid use of incomplete type ‘const struct WebCore::Cursor’
../../../../sources/WebKit/WebKit/Source/WebKit2/Shared/WebCoreArgumentCoders.h:35:11: error: forward declaration of ‘const struct WebCore::Cursor’


Attached patch fixes these build breaks
Comment 3 Lukasz Slachciak 2011-06-19 04:16:24 PDT
Created attachment 97720 [details]
build break fix

additionally small fix in my changelog entry
Comment 4 WebKit Review Bot 2011-06-21 10:00:09 PDT
Comment on attachment 97720 [details]
build break fix

Clearing flags on attachment: 97720

Committed r89360: <http://trac.webkit.org/changeset/89360>
Comment 5 WebKit Review Bot 2011-06-21 10:00:13 PDT
All reviewed patches have been landed.  Closing bug.