2011-06-21  Lukasz Slachciak  <l.slachciak@samsung.com>

Reviewed by Sam Weinig.

        [GTK] [WK2] WebKit2 build break fixes.
        https://bugs.webkit.org/show_bug.cgi?id=62950

        When building WebKit2 for GTK there are few build breaks connected with missing include files.

        * Platform/unix/SharedMemoryUnix.cpp:
        * Shared/gtk/WebCoreArgumentCodersGtk.cpp:
        * UIProcess/API/gtk/PageClientImpl.cpp:

Canonical link: https://commits.webkit.org/78674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89360 268f45cc-cd09-0410-ab3c-d52691b4dbfc